--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
                 <form action="" class="relative flex justify-start items-start flex-row gap-0 form__search">
                   <select class="form-select border border-solid !border-primary-color py-[8px] px-[15px] rounded-0 h-[48px] !w-[100px]">
                     <option selected disabled>الفئات</option>
-                    <option value="1">أداب</option>
-                    <option value="2">سياسة</option>
-                    <option value="3">علوم</option>
-                    <option value="4">إدارة</option>
+                    <option value="1">أجهزة</option>
+                    <option value="2">الكتب</option>
+                    <option value="3">الروايات</option>
+                    <option value="4">الدعايا و الأعلان</option>
+                    
                   </select>
                   <input type="text" placeholder="بحث ..." class="bg-transparent border border-solid !border-primary-color py-[8px] px-[15px] w-[350px] h-[48px] text-third-color font-medium text-[16px]">
                   <button type="submit" class="absolute top-[8px] left-[12px]">
